--- a/codes/state/PostFitDetail/PostFitDetail.scss
+++ b/codes/state/PostFitDetail/PostFitDetail.scss
@@ -29,5 +29,11 @@
       top: -5px;
       left: 105px;
     }
+
+
+    .ion-android-close::before{
+      font-size: 20px !important;
+      color: $positive;
+    }
   }
 }
