--- a/codes/state/0Main/Main.scss
+++ b/codes/state/0Main/Main.scss
@@ -3,4 +3,7 @@
     background: url('../img/side_menu_01.jpg') no-repeat center center;
     background-size: cover;
   }
+  .white {
+    color: white;
+  }
 }
